# lightpub

./: .air.toml  .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  bootstrap.php  build.sh  composer.json  config.sample.yaml  docker-compose.dev.or.yml  docker-compose.dev.yml  docker-compose.fed.or.yml  docker-compose.fed.yml  docker-compose.inc.yml  docker-compose.yml  entrypoint.sh  error_handler.go  generate-jwt-keys.sh  generate-vapid-keys.sh  go.mod  go.sum  index.html  lightpub.code-workspace  main.go  pg_to_maria.json  pg_to_maria.py  prompt.md  template.go
loader/: README.md  pyproject.toml
loader/lightpub_loader/: main.py
rs/: .dev.dockerignore  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.worker  Makefile  README.md  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.fed.yml  docker-compose.test.yml  docker-compose.yml  docker_build.sh  docker_start.sh  docker_worker_build.sh  docker_worker_start.sh  generate_entity.sh  lightpub.docker.prod.yml  lightpub.test.yml  lightpub.yml.docker  lightpub.yml.sample  lightpub.yml.test  openapi.yaml  package-lock.json  refinery.docker.prod.toml  refinery.docker.toml  refinery.toml  run_dev_server.sh  run_federation_test.sh  run_tests.sh  rustfmt.toml  trend.rs  wait_mysql.sh
rs/.sqlx/: query-01f3d6129e0305595aa93ba17645f3efb8ab1545bb8ef4c7a808873244a9cab4.json  query-021faa17be0c5300bdb3bf07247acaa29cb3e9257e791e978a5dfb854404b116.json  query-052270934d4c216b28637bd365b84cc346b02b812be9f9413fab220520fa09db.json  query-08cf0e0d949db15691111bfde14768d22b8d9cc77ea12cbb14b5a9aaa6ece55c.json  query-08dbe7f87e9a81e60cb56c141e6859b6c22ae5df3518737cc6c0e7e6f76dd879.json  query-0a4adf3d55e13974bd9a5bfe89b723d71fd4331cfbecd7a774f258ebb7fb7a56.json  query-0f3f47b2729686dcc072a4f9417338f572b363cc6f34b30a7624e05cf3dce93d.json  query-10018b425c7dc5dc5fd25592a388e984958cffe63386d29862d893ec34e636a9.json  query-12d4f2d29586018ec5664400783adc342c8113cd331fb3bc0dc730c02aed7f46.json  query-18e70beca5e284b5046f87b0e01842e192bddc4675b9443206b5cc43e3a986a6.json  query-1bf4d422e9d5f0b78c52d6dccab09ceda95dec3b437050657b1b3a4e2ef4446c.json  query-1f2f018148213616ffbdfd45ddd3efc7eaaa6c976576b363137d349eddadd0ee.json  query-1f370d3d5dd1230344d508289a2072010540bffc05d753f85d7f5a2c2aff3689.json  query-1f71257b133bb1d32b03656d78f001f9996f5e900204f40247208f93a65c1546.json  query-23d069900b09377feff784650f55003c216c00e0352dbe0cefa5d0fedc6f64e6.json  query-259b0f22b536c4d07d5a55010f6fda70805c57b45002345254a30a21e093eb96.json  query-26e0a4fd7885d1d41097370ff42f93ceb6ee9f122d70d2680248297d74ac452e.json  query-2762856d1cbc4dd180cc5b96e6206206e92b003de85146a1575a28be4d978b73.json  query-2a3cdbd81c22689d118d614fc8429c08c07d69f53acb7f8c3b59df474fcf320d.json  query-2b57129e9748a12c05a0fdb1ad4998c44d0d77c87012b45731105251b6623070.json  query-2e9ca07260f7a7893808d5044ed61c16552bddc53072d4320e0b215cf1d21a61.json  query-2ece54dfcb4589849c90fa8fbab5369bf64cf70d30c884c99f8cc82c4803ad81.json  query-3afa2a0392c71416ead88be48c296dd01f736638e98a8dedd83534ae513d7172.json  query-3ebe23a5abfc710a07545f69369027417ef3696cdb1f1e131df44183081da5a7.json  query-3fc152ed7e5889c7af5f22c9a341002db6ef750603f53fd73e762cade03ef338.json  query-472328b2565aac3a2a8a7174c4e3acb9883fd1476312f0ea576313314bffbdea.json  query-472762872d0b037f7b932bbb43362f6ce5f7a27c5555a7046806273593236525.json  query-47b37409c4319f404edf69c381bc2b6f4a225d2681ad2aab4e0d519c4feba22d.json  query-4a0c02b47b99046550267497107481b0b68565b0068e7426af04e0fa6dd4155f.json  query-4a392153ad5e3e2d02d8e85ce6bc0e7bb7b0761fc4b7aef7f241a402b44de300.json  query-4f5f75d2305f10859bd250d998708e0ebfba34779f96e4d36bac862faad453a9.json  query-52ed14894c426a8817bf7d20fd44f229573e99ba8fdb082ec0369f9db9352d61.json  query-5424e032642491f782c8cbf5ee3d920831eae4fd47368c10d15bebb61bbe95b2.json  query-54792c669799474224e2fbe6b4752424db471aa3bc5b6b4ecb84bbf590a041b2.json  query-5742dfc31b0dc1df515878cf0e7c2c804fc713700dc1809ecf40d7a13d4f886c.json  query-577f692e017b034b847712ede00cf3034549a623bd8612d9c8fffc684fad73cd.json  query-5d235349d65cb6b0331da17834a9e35f8457d719df6ad13964129f0c7c1a1dd5.json  query-5d368397d750187556bdcc9b04b0642ac8a0483219107e3763a45b7f513faa17.json  query-5dff02651437c7612d8b4b7b0e0aec49346304d1a432d92f180aa22887f90ec0.json  query-60f05ad8fcf4bbc0913648e4007ad6ac1bd51441c85b4813104dd5f22cb93ba8.json  (+84 more)
rs/api/: Cargo.toml
rs/api/src/: lib.rs  main.rs  ssr.rs  state.rs
rs/api/templates/: login.html  register.html
rs/backend/: Cargo.toml
rs/backend/src/: id.rs  lib.rs
rs/config/: Cargo.toml
rs/config/src/: lib.rs
rs/db/: .gitignore
rs/gen_span/: Cargo.toml
rs/memcached/: Dockerfile
rs/migration/: Cargo.toml
rs/migrations/: 20240705025113_initial.sql  20240917093322_init.sql  20240917094716_queue.sql  V10__follow_unique.sql  V11__poster_cascade.sql  V12__uri_unique.sql  V13__no_uri_unique.sql  V14__uploaded_files_default.sql  V15__post_favorites_time.sql  V16__reaction_time.sql  V17__favorite_reaction_id.sql  V18__reaction_schema.sql  V19__reaction_collation.sql  V1__initial.sql  V2__remote_user.sql  V2__usertoken_default.sql  V3__post_inserted_at.sql  V3__usertoken_default.sql  V4__post_default.sql  V4__queue.sql  V5__follow_default.sql  V5__simple_queue.sql  V6__follow_cascade.sql  V7__remote_user_details.sql  V8__remote_user_details_delete.sql  V9__user_no_unique.sql
rs/model/: Cargo.toml
rs/rabbitmq/: Dockerfile
rs/scripts/: dev_down_all.sh  dev_log.sh  dev_log_all.sh  dev_log_nginx.sh  dev_restart.sh  dev_restart_nginx.sh  dev_up_all.sh
rs/src/: api_main.rs  api_root.rs  config.rs  lib.rs  main.rs  model.rs  models.rs  state.rs  worker_main.rs
rs/tests/: .dockerignore  .gitignore  .mocharc.yml  Dockerfile  README.md  bun.lockb  index.ts  main.ts  package-lock.json  package.json  register.test.ts  truncate_db.sh  tsconfig.json
rs/tests-js/: .mocharc.yml  wait_server.sh
rs/tests_federation/: Dockerfile  package-lock.json  package.json
rs/utils/: Cargo.toml
rs/worker/: Cargo.toml
(+958 files in other folders)
