[package]
name = "lightpub_rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "entity",
    "packages/expected_error",
    "packages/expected_error_derive",
    "migration",
    "packages/lightpub_service",
]

[dependencies]
expected_error_derive = { path = "./packages/expected_error_derive" }
expected_error = { path = "./packages/expected_error" }
lightpub_service = { path = "./packages/lightpub_service" }
entity = { path = "./entity" }
migration = { path = "./migration" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.5", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.39"
serde = "1.0.217"
serde_json = "1.0.137"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
anyhow = "1.0.95"
thiserror = "2.0.11"
bcrypt = "0.17.0"
ulid = { version = "1.1.4", features = ["serde", "uuid"] }
regex = "1.11.1"
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15.7"
derive_builder = "0.20.2"
derive-getters = "0.5.0"
derive_more = { version = "2", features = ["display", "constructor", "from"] }
jsonwebtoken = "9"
console-subscriber = "0.4.1"
httpdate = "1.0.3"
actix-session = { version = "0.10.1", features = ["redis-session"] }
env_logger = "0.11.6"
handlebars = { version = "6.3.0", features = ["dir_source"] }
urlencoding = "2.1.3"
percent-encoding = "2.3.1"
actix-files = "0.6.6"
base64 = "0.22.1"
serde_qs = "0.13.0"
actix-multipart = "0.7.2"
identicon-rs = "6.0.1"
url = { version = "2.5.4", features = ["serde"] }
async-recursion = "1.1.1"
actix-middleware-etag = "0.4.2"
pulldown-cmark = "0.12.2"
ammonia = "4.0.0"
async-trait = "0.1.86"
nestify = "0.3.3"
itertools = "0.14.0"
infer = "0.19.0"
tempfile = "3.16.0"
activitypub_federation = { version = "0.6.2", features = [
    "actix-web",
], default-features = false }
once_cell = "1.20.3"
enum_delegate = "=0.2.0"
reqwest = { version = "0.12.5", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
reqwest-middleware = "0.3.0"
mime = "0.3.17"
rexiv2 = "0.10.0"
http-cache-reqwest = "0.14.0"
redis = { workspace = true }
async-nats = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
web-push = { workspace = true }
http = { workspace = true }
totp-rs = { workspace = true }

[workspace.dependencies]
redis = { version = "0.28.2", features = [
    "tokio-comp",
    "connection-manager",
    "uuid",
    "json",
] }
async-nats = "0.39.0"
futures-util = "0.3.31"
tokio-util = "0.7.13"
web-push = "0.11.0"
http = "1.3.1"
totp-rs = { version = "^5.0", features = ["gen_secret", "qr", "otpauth"] }
