[package]
name = "lightpub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bcrypt = "0.15"
chrono = "0.4.34"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "serde", "fast-rng"] }
valico = "2"
refinery = { version = "0.8", features = ["mysql"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono", "json", "uuid", "macros" ] }
regex = "1"
thiserror = "1.0"
derive_builder = "0.20.0"
derive-getters = "0.3.0"
