[package]
name = "lightpub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bcrypt = "0.15"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "v7", "serde", "fast-rng"] }
valico = "2"
refinery = { version = "0.8", features = ["mysql"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono", "json", "uuid", "macros" ] }
regex = "1"
thiserror = "1.0"
derive_builder = "0.20.0"
derive-getters = "0.3.0"
derive_more = { version = "=1.0.0-beta.6", features = ["constructor"] }
actix-web-httpauth = "0.8.1"
utoipa = { version = "4.2.0", features = ["actix_extras","uuid"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
json-ld = "0.15.1"
serde_json = "1.0.114"
reqwest = {version="0.11.24", features=["json"]}
rsa = {version="0.9.6", features=["sha2"]}
rand = "0.8.5"
pkcs8 = "0.10.2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.0"
linked-hash-map = "0.5.6"
async-recursion = "1.0.5"
httpdate = "1.0.3"
digest = "0.10.7"
activitystreams = "0.6.2"
anyhow = { version="1.0.80", features=["backtrace"] }
