[package]
name = "lightpub_api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4"
actix-web-httpauth = "0.8.1"
anyhow = { version = "1.0.80", features = ["backtrace"] }
async-recursion = "1.0.5"
async-trait = "0.1.77"
base64 = "0.22.0"
bcrypt = "0.15"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive"] }
derive-getters = "0.3.0"
derive_builder = "0.20.0"
derive_more = { version = "=1.0.0-beta.6", features = ["constructor", "from"] }
digest = "0.10.7"
emojis = "0.6.1"
futures = "0.3.30"
httpdate = "1.0.3"
json-ld = "0.15.1"
lapin = "2.3.1"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
pkcs8 = "0.10.2"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11.24", features = ["json"] }
rsa = { version = "0.9.6", features = ["sha2", "serde"] }
scraper = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7"
serde_with = "3.7.0"
serde_yaml = "0.9.34"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "json",
    "uuid",
    "macros",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["v4", "v7", "serde", "fast-rng"] }
valico = "2"
