[package]
name = "lightpub_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightpub_config = {path = "../config"}
lightpub_utils = {path = "../utils"}
lightpub_model = {path = "../model"}
lightpub_backend = {path = "../backend"}
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "json",
    "uuid",
    "macros",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lapin = "2.3.1"
actix-multipart = "0.6.1"
actix-web = "4"
actix-web-httpauth = "0.8.1"
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4", "v7", "serde", "fast-rng"] }
urlencoding = "2.1.3"
chrono = { version = "0.4.34", features = ["serde"] }
serde_urlencoded = "0.7"
serde_yaml = "0.9.34"
actix-cors = "0.7.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
