[package]
name = "lightpub_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightpub_model = {path = "../model"}
lightpub_backend = {path = "../backend"}
lightpub_utils = {path = "../utils"}
lightpub_config = {path = "../config"}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lapin = "2.3.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4", "v7", "serde", "fast-rng"] }
serde_yaml = "0.9.34"
reqwest = { version = "0.11.24", features = ["json"] }
rsa = { version = "0.9.6", features = ["sha2", "serde"] }
futures = "0.3.30"
